Breaking user information like title if it gets too long for the panel.  fixes #9527

--- a/app/assets/stylesheets/_dashboard.scss
+++ b/app/assets/stylesheets/_dashboard.scss
@@ -27,8 +27,9 @@
   }
   .user-info {
     padding-left: 0;
+    word-break: break-word;
   }
-  .sort-toggle, #documents {
+  .sort-toggle, #documents, .batch-toggle {
     border-left: 1px solid $gray-light;
     border-right: 1px solid $gray-light;
   }
@@ -77,7 +78,7 @@ div.heading-tile .glyphicon {
   margin-bottom: 0;
 }
 
-.sort-toggle {
+.sort-toggle, .batch-toggle {
   padding: 1.5em 0 1.5em 1em;
 }
 
